2012-10-19  Alan Modra  <amodra@gmail.com>

	* configure.ac (HAVE_LD_NO_DOT_SYMS): Set if using gold.
	(HAVE_LD_LARGE_TOC): Likewise.
	* configure: Regenerate.

2012-10-19  Alan Modra  <amodra@gmail.com>

	* config/rs6000/predicates.md (splat_input_operand): Don't call
	input_operand for MEMs.  Instead check for volatile and call
	memory_address_addr_space_p with modified mode.

2012-10-17  Matthew Gretton-Dann  <matthew.gretton-dann@linaro.org>

	Backported from mainline
	2012-07-23  Ulrich Weigand  <ulrich.weigand@linaro.org>

	* config/arm/arm.c (arm_reorg): Ensure all insns are split.

2012-10-16  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/54870
	* tree.h (TREE_ADDRESSABLE): Document special usage on SSA_NAME.
	* cfgexpand.c (update_alias_info_with_stack_vars ): Set it on the
	SSA_NAME pointer that points to a partition if there is at least
	one variable with it set in the partition.
	* dse.c (local_variable_can_escape): New predicate.
	(can_escape): Call it.
	* gimplify.c (mark_addressable): If this is a partitioned decl, also
	mark the SSA_NAME pointer that points to a partition.

2012-10-16  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline
	2012-08-09  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/53701
	* sel-sched.c (vinsn_vec_has_expr_p): Clarify function comment.
	rocess not only expr's vinsns but all old vinsns from expr's
	istory of changes.

2012-10-16  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline
	2012-07-31  Andrey Belevantsev  <abel@ispras.ru>
	PR target/53975

	* sel-sched-ir.c (has_dependence_note_reg_use): Clarify comment.
	Revert
	2011-08-04  Sergey Grechanik  <mouseentity@ispras.ru>
	* sel-sched-ir.c (has_dependence_note_reg_use): Call ds_full_merge
	only if producer writes to the register given by regno. 

2012-09-15  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2012-10-15  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (UNSPEC_MOVU): Remove.