@@ -1,3 +1,11 @@
+2012-10-19  Zhenqiang Chen <zhenqiang.chen@linaro.org>
+
+	Backport from mainline
+	2012-10-19  Zhenqiang Chen <zhenqiang.chen@linaro.org>
+
+	PR target/54892
+	* gcc.target/arm/pr54892.c: New.
+
 2012-10-16  Andrey Belevantsev  <abel@ispras.ru>
 
 	Backport from mainline
